feat: enhance support for QRIS and Flazz transactions, add inspection and retry functionality
